# hodl-engine

./: .gitignore  CLAUDE.md  Taskfile.yml
.claude/: launch.json
app/: config.py  db.py  main.py  pyproject.toml
app/domains/advisor/: prompts.py  router_api.py  router_pages.py  schemas.py  service.py
app/domains/portfolio/: router_api.py  router_pages.py  schemas.py  service.py  value_objects.py
app/domains/rebalance/: router_api.py  router_pages.py  schemas.py  service.py
app/exchange/: client.py  schemas.py
app/routers/api/: app.py
app/routers/pages/: app.py
app/static/: style.css
app/templates/: advisor.html  asset-detail.html  base.html  dashboard.html  rebalance.html
